# drop-it

./: .env.test  .pylintrc  Makefile  docker-compose.yml  main.py  pyproject.toml
app/admin/: auth.py  views.py
app/api/: routers.py
app/api/dependencies/: auth.py  services.py
app/api/exceptions/: auth_exceptions.py  drop_exceptions.py  error_messages.py  http_exceptions.py  user_exceptions.py
app/api/routes/: auth.py  drops.py  users.py
app/api/v1/: auth.py  drops.py  genres.py  health_check.py  users.py
app/api/v1/views/: user.py
app/api/views/: auth.py  drops.py  users.py
app/core/: config.py  logger.py  security.py
app/core/middleware/: logging.py
app/core/middlewares/: db.py
app/db/: base.py  engine.py  models.py
app/db/models/: __init__.py  base.py  drop.py  user.py
app/db/query_builders/: drops.py
app/db/repositories/: drops.py  interfaces.py  users.py
app/exceptions/: auth_exceptions.py  drop_exceptions.py  error_messages.py  handlers.py  http_exceptions.py  user_exceptions.py
app/middleware/: logging.py
app/models/: __init__.py  drop.py  user.py
app/repositories/: base.py  drops.py  interfaces.py  user.py  users.py
app/schemas/: auth.py  base.py  drops.py  user.py  users.py
app/services/: auth.py  base.py  drops.py  interfaces.py  s3.py  user.py  users.py
app/utils/: patch.py
migrations/: env.py
migrations/versions/: 139b060e0801_init.py  1baf9bfd9787_init.py  79736366794a_init.py  b0032c605907_init.py  b3ae148882e9_init.py
tests/: conftest.py  factory.py  test_common.py
tests/admin/: test_auth.py  test_views.py
tests/api/: conftest.py  test_auth.py  test_dependencies.py  test_drop.py  test_drops.py  test_genres.py  test_health.py  test_user.py  test_users.py
tests/db/: fixture_values.py  test_models_relationship.py
tests/repositories/: conftest.py  test_drop.py  test_drops.py  test_genres.py  test_user.py  test_users.py
tests/services/: conftest.py  test_auth.py  test_drop.py  test_drops.py  test_genres.py  test_user.py  test_users.py
tests/utils/: test_patch.py
