[project]
name = "drop-it"
version = "0.1.0"
description = ""
authors = [
    {name = "Osokin_A_I",email = "aptem21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
sqlalchemy-utils = "^0.41.2"
faker = "^37.4.2"
factory-boy = "^3.3.3"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
isort = "^6.0.1"
flake8 = "^7.3.0"
pylint = "^3.3.7"
unify = "^0.5"
autoflake = "^2.3.1"
black = "^25.1.0"
pytest-cov = "^6.2.1"

