[tool.poetry]
name = "drop-it"
version = "0.1.0"
description = ""
authors = ["Osokin_A_I <aptem21@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]  # Опционально, если нужно явно указать

[tool.poetry.dependencies]
python = ">=3.13"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.42,<3.0.0"}
alembic = ">=1.16.4,<2.0.0"
fastapi = {extras = ["standard"], version = ">=0.116.1,<0.117.0"}
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-multipart = ">=0.0.20,<0.0.21"
asyncpg = ">=0.30.0,<0.31.0"
bcrypt = "<4.1.0"
loguru = {version = "^0.7.3", markers = "python_version < '4.0'"}
sqladmin = "^0.21.0"
itsdangerous = "^2.2.0"
aioboto3 = "^15.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
sqlalchemy-utils = "^0.41.2"
faker = "^37.4.2"
factory-boy = "^3.3.3"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
isort = "^6.0.1"
flake8 = "^7.3.0"
pylint = "^3.3.7"
unify = "^0.5"
autoflake = "^2.3.1"
black = "^25.1.0"
pytest-cov = "^6.2.1"
asgi-lifespan = "^2.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
